[package]
name = "cryptis_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
hex = "0.4"  
anyhow = "1.0"
env_logger = "0.11"